fix white space on right side

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,14 @@ html {
 	font-family: "Lato";
 	font-size: 16px;
 }
+html,
+body {
+	width: 100%;
+	height: 100%;
+	margin: 0px;
+	padding: 0px;
+	overflow-x: hidden;
+}
 h1 {
 	text-align: center;
 	font-size: 8vw;
